@@ -38,6 +38,7 @@ Post-v3.6.0
    - ovs-appctl:
      * 'ovs/route/show': added new option, table=[ID|all], to list routes from
        a specific table or all routes from all tables.
+     * Added a new sub-command, ovs/route/rule/show, to list OVS router rules.
 
 
 v3.6.0 - 18 Aug 2025
